--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,17 +236,6 @@ nav ul li a:hover {
     font-weight: 400;
 }
 
-
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style-type: none;
-    scroll-behavior: smooth;
-    transition: all 200ms linear;
-}
-
 .chessbrgr2 {
     position: absolute;
     left: 21%;
@@ -257,12 +246,12 @@ nav ul li a:hover {
 .chessbrgr {
     left: 7%;
     position: absolute;
-    top: 37%;
+    top: 46%;
 }
 
 .chessbrgr3 {
-    top: 21%;
     position: absolute;
+    top: 20%;
     right: 21%;
 }
 
@@ -275,7 +264,7 @@ nav ul li a:hover {
 .paneer {
     position: absolute;
     bottom: 2%;
-    left: 0%;
+    left: -2%;
 }
 
 .paneer1 {
@@ -300,8 +289,10 @@ nav ul li a:hover {
     display: block;
 }
 
-.mycontainer {
-    max-width: 1320px;
+.my_container {
+    max-width: 990px !important;
+    padding-left: 12px;
+    padding-right: 12px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -334,10 +325,12 @@ nav ul li a:hover {
 }
 
 .man {
+    margin-bottom: 68px;
     font-weight: 400;
 }
 
 .jhone {
+    margin-top: 26px;
     font-weight: 700;
 }
 
@@ -354,7 +347,7 @@ nav ul li a:hover {
     top: 2%;
     bottom: 197px;
     left: 50%;
-    margin-left: -4px;
+    margin-left: -2px;
 }
 
 .gap30 {
@@ -373,10 +366,21 @@ nav ul li a:hover {
     font-weight: 400;
 }
 
+.para {
+    max-width: 463px;
+    font-weight: 400;
+    line-height: 180%;
+
+}
+
 .lastimg {
     margin-top: 88px;
 }
 
+.py12 {
+    padding-top: 12px;
+    padding-bottom: 12px;
+}
 
 .mrj8 {
     margin-top: 8px;
@@ -442,6 +446,10 @@ nav ul li a:hover {
     right: -50%;
 }
 
+.max-width {
+    max-width: 900px !important;
+}
+
 
 .right::after {
     left: -12px;
@@ -474,7 +482,7 @@ nav ul li a:hover {
 
     .left::after,
     .right::after {
-        left: 17px;
+        left: 19px;
     }
 
     .right {
@@ -517,8 +525,28 @@ input[ type="checkbox"]:checked+.ul {
 }
 
 @media (min-width:320px) {
-    .col-sm-12 {
-        margin-bottom: 27px;
+
+    .timeline::after {
+        content: "";
+        position: absolute;
+        width: 6px;
+        background-color: red;
+        top: 2%;
+        bottom: 197px;
+        left: 9;
+        margin-left: -1px;
+    }
+
+    .timelinecontainer::after {
+        content: "";
+        position: absolute;
+        width: 25px;
+        height: 25px;
+        right: -14px;
+        background-color: white;
+        top: 1%;
+        border-radius: 50%;
+        z-index: 1;
     }
 
     .parafont {
@@ -535,7 +563,8 @@ input[ type="checkbox"]:checked+.ul {
 
     .road {
         padding-top: 73px;
-        font-weight: 649;
+        font-weight: 700;
+        font-size: 47px;
     }
 
     .q1 {
@@ -559,4 +588,11 @@ input[ type="checkbox"]:checked+.ul {
     .d_lg_block {
         display: block !important;
     }
+}
+
+@media (min-width:1400px) {
+
+    /* .container-xxl {
+        max-width: 0 !important;
+    } */
 }
